staging/src/k8s.io/api/testdata/v1.24.0/extensions.v1beta1.Ingress.json
{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "nameValue",
    "generateName": "generateNameValue",
    "namespace": "namespaceValue",
    "selfLink": "selfLinkValue",
    "uid": "uidValue",
    "resourceVersion": "resourceVersionValue",
    "generation": 7,
    "creationTimestamp": "2008-01-01T01:01:01Z",
    "deletionTimestamp": "2009-01-01T01:01:01Z",
    "deletionGracePeriodSeconds": 10,
    "labels": {
      "labelsKey": "labelsValue"
    },
    "annotations": {
      "annotationsKey": "annotationsValue"
    },
    "ownerReferences": [
      {
        "apiVersion": "apiVersionValue",
        "kind": "kindValue",
        "name": "nameValue",
        "uid": "uidValue",
        "controller": true,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "finalizersValue"
    ],
    "clusterName": "clusterNameValue",
    "managedFields": [
      {
        "manager": "managerValue",
        "operation": "operationValue",
        "apiVersion": "apiVersionValue",
        "time": "2004-01-01T01:01:01Z",
        "fieldsType": "fieldsTypeValue",
        "fieldsV1": {},
        "subresource": "subresourceValue"
      }
    ]
  },
  "spec": {
    "ingressClassName": "ingressClassNameValue",
    "backend": {
      "serviceName": "serviceNameValue",
      "servicePort": "servicePortValue",
      "resource": {
        "apiGroup": "apiGroupValue",
        "kind": "kindValue",
        "name": "nameValue"
      }
    },
    "tls": [
      {
        "hosts": [
          "hostsValue"
        ],
        "secretName": "secretNameValue"
      }
    ],
    "rules": [
      {
        "host": "hostValue",
        "http": {
          "paths": [
            {
              "path": "pathValue",
              "pathType": "pathTypeValue",
              "backend": {
                "serviceName": "serviceNameValue",
                "servicePort": "servicePortValue",
                "resource": {
                  "apiGroup": "apiGroupValue",
                  "kind": "kindValue",
                  "name": "nameValue"
                }
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "loadBalancer": {
      "ingress": [
        {
          "ip": "ipValue",
          "hostname": "hostnameValue",
          "ports": [
            {
              "port": 1,
              "protocol": "protocolValue",
              "error": "errorValue"
            }
          ]
        }
      ]
    }
  }
}
